<resources>
    <string name="app_name">True Proof</string>
    <string name="signUpTitle">Fill in the information below to make a new account.</string>
    <string name="signUpText">Sign Up</string>
    <string name="emailText">Email</string>
    <string name="confirmationEmailText">Confirm Email</string>
    <string name="reTypeEmailText">Re-Type Email</string>
    <string name="passwordText">Password</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="reTypePasswordText">Re-Type Password</string>
    <string name="dSPNumberText">Distilled Spirits Plant Number</string>
    <string name="shortDSPNumberText">DSP#</string>
    <string name="userAgreementButtonText">User Agreement</string>
    <string name="userAgreementText">All information on the Site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability or completeness of any information on the Site. UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN RISK.</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="legal_information">Legal Information</string>
    <string name="codeText">Code</string>
    <string name="confirmationDescriptionText">We have sent you an email to the address you provided. Inside that email there is a code. Please type that code below to confirm your account.</string>
    <string name="loginText">Login</string>
    <string name="TtbTable">
        <a href="https://www.ttb.gov/images/pdfs/foia_Gauging_Manual_Tables/Table_1.pdf">TTB Gauging Manual</a>
    </string>
    <string name="interpolationTable">
        <a href="https://www.ttb.gov/distilled-spirits/proofing-page-interpolation-table">Interpolation of Proof Manual</a>
    </string>
    <string name="ecfr">
        <a href="https://www.ecfr.gov/cgi-bin/text-idx?SID=d52566b2cfd89ed58167c6cca87826f7&amp;node=27:1.0.1.1.25&amp;rgn=div5">Proofing Federal Regulations</a>
    </string>
    <string name="userSettingText">User Settings</string>
    <string name="noDistilleryNameText">Untitled Distillery</string>
    <string name="logOutText">Logout</string>
    <string name="quickCaculatorText">Quick Calculator</string>
    <string name="batchListText">Batch List</string>
    <string name="settingsText">Settings</string>
    <string name="batchNo1501Text">Batch no. 1501</string>
    <string name="whiskeyText">Whiskey</string>
    <string name="eigghtAndTwentyFouramTodayText">8:24am today</string>
    <string name="startedAt">Started at:</string>
    <string name="lastMeasurement">Last Measurement:</string>
    <string name="maxNumberProof">101.1 proof</string>
    <string name="amTodayText">10:06:21 am today</string>
    <string name="activeBatches">Active Batches</string>
    <string name="completedBatchesText">Completed Batches</string>
    <string name="newBatchText">New Batch</string>
    <string name="descriptionForImageNewBatchText">New Batch Icon</string>
    <string name="welcomeText">Welcome</string>
    <string name="quickProofText">Quick Proof</string>
    <string name="dontHaveAnAccountYetText">Don\'t have an account yet?</string>
    <string name="temperatureText">Temperature</string>
    <string name="temperatureCorrectionText">Temperature Correction</string>
    <string name="logInToSaveYourDataText">Log in to save your data</string>
    <string name="hydrometerCorrectionText">Hydrometer Correction</string>
    <string name="hydrometerText">Hydrometer</string>
    <string name="proofFTempText">76.4</string>
    <string name="proofAtFText">Proof at 60°F</string>
    <string name="quickProofingCalculatorText">Quick Proofing Calculator</string>
    <string name="termsOfUseText">Terms of Use</string>
    <string name="tempInCText">Temp in °C</string>
    <string name="tempInFText">Temp in °F</string>
    <string name="hydroText">Hydrometer Range</string>
    <string name="measurementDetailText">Measurement Detail</string>
    <string name="batchText">Batch #</string>
    <string name="correctedText">Corrected</string>
    <string name="dateText">10:10:15 am 11/21/21</string>
    <string name="saveNoteText">Save Note</string>
    <string name="differenceInTemperatureText">difference in Temperature</string>
    <string name="differenceInHydrometerText">difference in Hydrometer</string>
    <string name="flagAsProblemText">Flag as problem</string>
    <string name="textviewText">TextView</string>
    <string name="interpolationText">Interpolation</string>
    <string name="finalProofText">Final Proof</string>
    <string name="alcoholText">Alcohol</string>
    <string name="notesText">Notes</string>
    <string name="distilleryAndDspText">Distillery and DSP</string>
    <string name="batchIdentifierText">Batch Identifier</string>
    <string name="typeText">Type</string>
    <string name="batchNumberText">Batch Number</string>
    <string name="createBatchText">Create Batch</string>
    <string name="alchoholTypeText">Alchohol Type</string>
    <string name="identifierText">Identifier</string>
    <string name="defaultCorrectionNumber">0</string>
    <string name="defaultThermometerCorrectionText">Default Thermometer Correction</string>
    <string name="distilleryNameText">Distillery Name</string>
    <string name="dspNumberText">DSP#</string>
    <string name="distillerySettingsText">Distillery Settings</string>
    <string name="defaultHydrometerCorrectionText">Default Hydrometer Correction</string>
    <string name="fahrenheitText">Fahrenheit</string>
    <string name="celciusText">Celcius</string>
    <string name="defaultTemperatureUnitsText">Default Temperature Units</string>
    <string name="submitText">Submit</string>
    <string name="thermometerCorrectionText">Thermometer Correction</string>
    <string name="goToBatchDetailText">Go to Batch Detail</string>
    <string name="saveMeasurementText">Save Measurement</string>
    <string name="addMeasurementText">Add Measurement</string>
    <string name="batchDetailText">Batch Detail</string>
    <string name="statusText">Status</string>
    <string name="measurementsText">Measurements</string>
    <string name="updateText">Update</string>
    <string name="temperatureUnitsText">Temperature units</string>
    <string name="temperatureFtext">Temperature °F</string>
    <string name="temperatureCorrectionFText">Temperature Correction °F</string>
    <string name="updateTextBatch">Update Batch</string>
    <string name="exportBatch">Export</string>

</resources>